# red-teaming

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/sloptext/: PROJECT_WRITEUP.md
data/: agent_wiki_degrees_01__response.json  agent_wiki_degrees_02.json  standard_ss13_01.json
data/prompt_datasets/: data_leakage.json
data/prompt_ideas/: agent_wiki_degrees_01.json  agent_wiki_degrees_01.txt  standard_ss13_01.json
docs/: deployment.md  notes.md  terraform.md
joestuff/red_teaming/: .gitignore  IMPLEMENTATION_COMPLETE.md  atlas_attack_strategies.py  attack_orchestrator.py  custom_strategies.py  example_usage.py  run_tests.sh  scoring_rules.py  test_server.py  validate_setup.py
joestuff/red_teaming/datasets/: prompt_injections.json  safety_violations.json
joestuff/red_teaming/test_pages/: sidebar_exploit.html
src/atlas/: __init__.py  __main__.py  _typing.py  api.py  constants.py  demo.py  interact.py  log.py  orchestrator.py  parse.py  process.py  strategy.py
src/atlas/dataset/: __init__.py
src/atlas/orchestrator/: __init__.py  atlas.py  attack.py
src/atlas/prompt_converter/: __init__.py
src/atlas/prompt_target/: __init__.py  browser.py  target.py
src/atlas/score/: __init__.py  agent_exploit.py  base.py  browser_action.py  composite.py  data_leakage.py  indirect_injection.py  jailbreak.py  memory_poison.py  privacy_violation.py  prompt_injection.py  safety_violation.py
src/red_teaming/: .env.example  ARCHITECTURE.md  ATLAS_QUICK_REFERENCE.md  GETTING_STARTED.md  GET_STARTED.txt  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_SUMMARY.txt  README.md  TREE.txt  atlas_browser_target.py  atlas_orchestrator.py  atlas_scorer.py  attack_orchestrator.py  config.py  env.example  example_usage.py  openai_api_target.py  quick_test.py  report_generator.py  requirements.txt  setup.sh  validate_setup.py
src/red_teaming/datasets/: jailbreaks.json
src/red_teaming/test_pages/: cross_site_setup.html  indirect_injection.html  privacy_bypass.html
terraform/: .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  README.md  backend.tf  main.tf  outputs.tf  security.tf  terraform.tfvars  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/variables/: variables.tf
terraform/scripts/: vnc_setup.sh
tests/: __init__.py
tests/acceptance_tests/: __init__.py
tests/data/test_pages/: agent_hijack.html  cross_site_attack.html  memory_poison.html
tests/integration_tests/: __init__.py
tests/unit_tests/: __init__.py  test_constants.py  test_main.py
