[project]
name = "red-teaming"
version = "0.0.0"
description = "red-teaming"
authors = [
    { name = "Kyle Oliver", email = "56kyleoliver@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
    "red-teaming",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "pydantic>=2.12.3",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/56kyle/red-teaming"
Repository = "https://github.com/56kyle/red-teaming"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
